--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,2 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+game-of-go-qt-ui/build-game-of-go-qt-ui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/
+game-of-go-client/
