Handle sending and receiving invitation on UI

--- a/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
@@ -31,6 +31,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         gamewidget.h gamewidget.cpp gamewidget.ui
         menuwidget.h menuwidget.cpp menuwidget.ui
         playwidget.h playwidget.cpp playwidget.ui
+        challengewindow.h challengewindow.cpp challengewindow.ui
 
 
     )
