Handle game functionality on UI

--- a/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
@@ -34,6 +34,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         challengewindow.h challengewindow.cpp challengewindow.ui
         scoreboardwidget.h scoreboardwidget.cpp scoreboardwidget.ui
         logtablewidget.h logtablewidget.cpp logtablewidget.ui
+        territorywidget.h territorywidget.cpp territorywidget.ui
 
 
 
