--- a/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/CMakeLists.txt
@@ -40,6 +40,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         replaywidget.h replaywidget.cpp replaywidget.ui
         rankingswidget.h rankingswidget.cpp rankingswidget.ui
         gameconfigwindow.h gameconfigwindow.cpp gameconfigwindow.ui
+        chatwidget.h chatwidget.cpp chatwidget.ui
 
 
 
